--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,11 @@
         <div class="Stan-Smith-sneakers">
           <p>Stan Smith sneakers made in vintage-look suede.</p>
         </div>
+        <div class="Empty-Box1"></div>
         <div class="The-Stan-Smith-debut">
           <p>The Stan Smith debuted as a pro-level tennis sneaker in the '70s. It wasn't long before its crisp, clean aesthetic made it a crossover favorite off the court. These men's shoes update the timeless look with a suede upper. Featuring perforated 3-Stripes and the iconic rubber cupsole.</p>
         </div>
+        <div class="Empty-Box2"></div>
         <div class="-Suede-upper-Perf">
           <ul> 
             <li>Suede upper  </li>
@@ -31,9 +33,8 @@
             <li>Imported</li>
           </ul>
         </div>
-        <div class="clearfix"></div>
       </main>
     </div>
-    <footer></footer>
+    <footer>Pure</footer>
   </body>
 </html>
