--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,17 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <header>
+      <div class="My-menu">
+        <div class="Pure">
+          <h3>PURE</h3>
+        </div>
+        <div class="Women-Men-Kids-Sport">
+          <h3>Women Kids Sports Brands</h3>
+        </div>
+      </div>
+    </header>
     <div class="Casual-01-PDP">
-      <header></header>
       <main class="content">
         <div class="Stan-Smith-sneakers">
           <p>Stan Smith sneakers made in vintage-look suede.</p>
@@ -34,7 +43,7 @@
           </ul>
         </div>
       </main>
+      <footer>Pure</footer>
     </div>
-    <footer>Pure</footer>
   </body>
 </html>
