--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,17 @@
         <div class="Pure">
           <h3>PURE</h3>
         </div>
-        <div class="Women-Men-Kids-Sport">
-          <h3>Women Kids Sports Brands</h3>
+        <div class="Women-Men-Kids-Sport-Brands"><a href="#">Women</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">Men</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">Kids</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">Sports</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">Brands</a></div>
+        <div class="Search">
+          <h3>Search...</h3>
+        </div>
+        <div class="Log-in-My-cart">
+          <div class="My-cart">
+            <h3>My cart</h3>
+          </div>
+          <div class="Log-in">
+            <h3>Log in</h3>
+          </div>
         </div>
       </div>
     </header>
