--- a/public/index.html
+++ b/public/index.html
@@ -20,17 +20,22 @@
           <h3>Search...</h3>
         </div>
         <div class="Log-in-My-cart">
-          <div class="My-cart">
-            <h3>My cart</h3>
+          <div class="My-cart"><a href="#">My cart</a>
+            <div class="notification"><span>2</span></div>
           </div>
-          <div class="Log-in">
-            <h3>Log in</h3>
-          </div>
+          <div class="Log-in"><a href="#">Log in</a></div>
         </div>
       </div>
     </header>
     <div class="Casual-01-PDP">
       <main class="content">
+        <div class="rectangle"><img src="img/adidas.jpg"></div>
+        <div class="-levels">
+          <div class="Level-1"><span>Home </span>&nbsp;&nbsp;  <img src="img/arrow.png">&nbsp;&nbsp; </div>
+          <div class="Level-2"><span>Men</span>&nbsp;&nbsp; <img src="img/arrow.png">&nbsp;&nbsp; </div>
+          <div class="Level-3"><span>Shoes</span></div>
+        </div>
+        <div class="cazylight-boost-low"><span>Crazylight Boost Low 2016 Shoes</span></div>
         <div class="Stan-Smith-sneakers">
           <p>Stan Smith sneakers made in vintage-look suede.</p>
         </div>
