--- a/public/index.html
+++ b/public/index.html
@@ -29,31 +29,29 @@
     </header>
     <div class="Casual-01-PDP">
       <main class="content">
-        <div class="rectangle"><img src="img/adidas.jpg"></div>
-        <div class="-levels">
-          <div class="Level-1"><span>Home </span>&nbsp;&nbsp;  <img src="img/arrow.png">&nbsp;&nbsp; </div>
-          <div class="Level-2"><span>Men</span>&nbsp;&nbsp; <img src="img/arrow.png">&nbsp;&nbsp; </div>
-          <div class="Level-3"><span>Shoes</span></div>
+        <div class="product-details">
+          <div class="image"><img src="img/adidas.jpg"></div>
+          <div class="breadcrumbs">
+            <div class="Level-1"><span>Home </span>&nbsp;&nbsp;  <img src="img/arrow.png">&nbsp;&nbsp;</div>
+            <div class="Level-2"><span>Men</span>&nbsp;&nbsp; <img src="img/arrow.png">&nbsp;&nbsp; </div>
+            <div class="Level-3"><span>Shoes</span></div>
+          </div>
+          <h1 class="crazylight-boost-low">Crazylight Boost Low 2016 Shoes</h1>
         </div>
-        <div class="cazylight-boost-low"><span>Crazylight Boost Low 2016 Shoes</span></div>
-        <div class="Stan-Smith-sneakers">
-          <p>Stan Smith sneakers made in vintage-look suede.</p>
-        </div>
-        <div class="Empty-Box1"></div>
-        <div class="The-Stan-Smith-debut">
-          <p>The Stan Smith debuted as a pro-level tennis sneaker in the '70s. It wasn't long before its crisp, clean aesthetic made it a crossover favorite off the court. These men's shoes update the timeless look with a suede upper. Featuring perforated 3-Stripes and the iconic rubber cupsole.</p>
-        </div>
-        <div class="Empty-Box2"></div>
-        <div class="-Suede-upper-Perf">
-          <ul> 
-            <li>Suede upper  </li>
-            <li>Perforated 3-Stripes; Stan Smith logo on tongue  </li>
-            <li>Leather lining  </li>
-            <li>Enjoy the comfort and performance of OrthoLite® sockliner  </li>
-            <li>Logo on heel tab  </li>
-            <li>Rubber cupsole  </li>
-            <li>Imported</li>
-          </ul>
+        <div class="about">
+          <h2>Stan Smith sneakers made in&nbsp;vintage-look suede.</h2>
+          <div class="text">
+            <p>The Stan Smith debuted as a pro-level tennis sneaker in the '70s. It wasn't long before its crisp, clean aesthetic made it a crossover favorite off the court. These men's shoes update the timeless look with a suede upper. Featuring perforated 3-Stripes and the iconic rubber cupsole.</p>
+            <ul> 
+              <li>Suede upper </li>
+              <li>Perforated 3-Stripes; Stan Smith logo on tongue </li>
+              <li>Leather lining</li>
+              <li>Enjoy the comfort and performance of OrthoLite® sockliner </li>
+              <li>Logo on heel tab</li>
+              <li>Rubber cupsole</li>
+              <li>Imported</li>
+            </ul>
+          </div>
         </div>
       </main>
       <footer>Pure</footer>
