--- a/public/index.html
+++ b/public/index.html
@@ -30,13 +30,53 @@
     <div class="Casual-01-PDP">
       <main class="content">
         <div class="product-details">
-          <div class="image"><img src="img/adidas.jpg"></div>
-          <div class="breadcrumbs">
-            <div class="Level-1"><span>Home </span>&nbsp;&nbsp;  <img src="img/arrow.png">&nbsp;&nbsp;</div>
-            <div class="Level-2"><span>Men</span>&nbsp;&nbsp; <img src="img/arrow.png">&nbsp;&nbsp; </div>
-            <div class="Level-3"><span>Shoes</span></div>
+          <div class="image"><img src="img/beige.jpg"></div>
+          <div class="configuration">
+            <div class="breadcrumbs">
+              <div class="Level-1"><a href="#">Home </a>&nbsp;&nbsp;>&nbsp;&nbsp;</div>
+              <div class="Level-2"><a href="#">Men</a>&nbsp;&nbsp;>&nbsp;&nbsp; </div>
+              <div class="Level-3"><span>Shoes</span></div>
+            </div>
+            <h1 class="crazylight-boost-low">Crazylight Boost Low 2016 Shoes</h1>
+            <div class="cost"><span>$9.90</span></div>
+            <div class="color"><span>Color</span></div>
+            <div class="buttons">
+              <button><img src="img/beige.jpg"></button>
+              <button><img src="img/green.jpg"></button>
+            </div>
+            <div class="size"><span>Size</span></div>
+            <div class="size-selector">
+              <table>
+                <tr>
+                  <div class="choose">
+                    <td>4</td>
+                  </div>
+                  <td>4.5</td>
+                  <td>5</td>
+                  <td>5.5</td>
+                  <td>6</td>
+                  <td>6.5</td>
+                  <td>7</td>
+                </tr>
+                <tr>
+                  <td>7.5</td>
+                  <td>8</td>
+                  <td>8.5</td>
+                  <td>9</td>
+                  <td>9.5</td>
+                  <td>10</td>
+                  <td>10.5</td>
+                </tr>
+                <tr>
+                  <td>11</td>
+                  <td>11.5</td>
+                  <td>12</td>
+                  <td>12.5</td>
+                  <td>13</td>
+                </tr>
+              </table>
+            </div>
           </div>
-          <h1 class="crazylight-boost-low">Crazylight Boost Low 2016 Shoes</h1>
         </div>
         <div class="about">
           <h2>Stan Smith sneakers made in&nbsp;vintage-look suede.</h2>
